Bug 437365 - Numbered value scale in artistic color selector does not show numbers
Summary: Numbered value scale in artistic color selector does not show numbers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Android Android 11.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-19 14:50 UTC by Anna Medonosova
Modified: 2026-01-28 08:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The value strip with text, just above the disappearing threshold (198.46 KB, image/jpeg)
2024-11-21 15:41 UTC, Vitamorus
Details
The value strip without text (198.44 KB, image/jpeg)
2024-11-21 15:43 UTC, Vitamorus
Details
Screenshot of bug not appearing on Tab S7 FE on Android 14 (404.64 KB, image/jpeg)
2024-11-21 16:38 UTC, Reinold Rojas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Medonosova 2021-05-19 14:50:46 UTC
SUMMARY

When numbered value scale is turned on in the Artistic color selector, a grayscale strip with numbers is shown on the lefy of the selector. On Android, the strip is shown correctly, but the numbers are missing.



STEPS TO REPRODUCE
1. Turn on numbered value scale in the selector settings


OBSERVED RESULT
The gray strip is shown on the left side of the docker, however, the numbers are missing.



EXPECTED RESULT
The gray strip should have numbers on top.
Comment 1 sh_zam 2021-05-26 11:16:41 UTC
Yes, can confirm the bug. Oddly, the numbers are shown properly if the widget is resized to a larger size.
Comment 2 Reinold Rojas 2024-11-21 03:49:04 UTC
Checking on Krita Latest 5.2.6 the numbers appear correctly on the Artistic Color Selector. Even if I decrease the size of the docker to the minimum the numbers still appear. Setting to resolved.
Comment 3 Vitamorus 2024-11-21 15:35:40 UTC
Reinold, did you check this on Android (the platform this was reported for)? I just had a friend confirm that this happens on her Android tablet on Krita version 5.2.8. However, this seems to happen at a threshold where the text is too small to read anyway so maybe it's not something to be concerned about.
Comment 4 Vitamorus 2024-11-21 15:41:29 UTC
Created attachment 176008 [details]
The value strip with text, just above the disappearing threshold
Comment 5 Vitamorus 2024-11-21 15:43:38 UTC
Created attachment 176009 [details]
The value strip without text
Comment 6 Reinold Rojas 2024-11-21 16:38:14 UTC
Created attachment 176012 [details]
Screenshot of bug not appearing on Tab S7 FE on Android 14

Hi Vitamorus,

Thanks for double checking. I did check this on an Android tablet (Tab S7 FE on Android 14) Krita 5.2.6. I can pop out the docker and move it to its minimum size and it still has the numbers for me.  

Attached a screenshot. Let me know if I seem to be doing something incorrectly to reproduce.
Comment 7 Reinold Rojas 2024-11-21 16:49:52 UTC
OK, I think in my screenshot I have it docker thin but still somewhat tall. Making the docker very short I can reproduce the bug. Thanks again for double checking.

I think we can set to confirmed now?

Reproduce steps:
1. Enable Artist color selector
2. Click on Docker Settings
3. Enable "show number value scale"
4. Pop out Docker
5.  Make the docker very thin and very short
Comment 8 Bug Janitor Service 2026-01-26 01:22:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2617
Comment 9 Dmitry Kazakov 2026-01-28 08:42:07 UTC
Git commit e6d8dc0d49bc128e3c5c7c4a17c4541dc525ff96 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 28/01/2026 at 08:41.
Pushed by dkazakov into branch 'master'.

Scale down artistic color selector numbers better

It now takes the existence of pixel fonts into account and scales the
font down with a larger step size when it starts at a high value to
avoid running into the retry limit when large fonts on scaled displays
are involved.

M  +12   -1    plugins/dockers/artisticcolorselector/kis_color_selector.cpp

https://invent.kde.org/graphics/krita/-/commit/e6d8dc0d49bc128e3c5c7c4a17c4541dc525ff96