Scale down artistic color selector numbers better

It now takes the existence of pixel fonts into account and scales the
font down with a larger step size when it starts at a high value to
avoid running into the retry limit when large fonts on scaled displays
are involved.

BUG:437365